core/compiler/tests/programs/ok/adt.loz
:: T = T Int
g (T i) = i

f x = 18 * g x

Main = f (T 9)