core/compiler/tests/programs/type_err/multiply_functions.loz
f x = x * g
where
    g x y = x * y
.

main = f 18